--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.maskdetectionjava">
 
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaskDetectionJava">
+       <activity
+           android:name=".Mask"
+           android:exported="false"/>
+        <activity
+            android:name=".SymptomChecker"
+            android:exported="false"/>
+        <activity
+            android:name=".Timecard"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
