--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,9 @@ dependencies {
     implementation "androidx.camera:camera-camera2:${cameraxVersion}"
     implementation "androidx.camera:camera-view:1.0.0-alpha27"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    def fragment_version = "1.4.1"
+    // Java language implementation
+    implementation "androidx.fragment:fragment:$fragment_version"
+    // Testing Fragments in Isolation
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 }
